# go-bindata

./: .gitignore  .travis.yml  AUTHORS.txt  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  benchmark_test.go  bits.go  convert.go  convert_test.go  debug.go  filewriter.go  go.mod  go.sum  main.go  release.go  release_go112.go  release_test.go  restore.go  safefile_test.go  toc.go  umask.sh
.github/workflows/: ci.yml
go-bindata/: BUILD.bazel  main.go  version.go
testdata/: Makefile  download-photos.sh
